--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
 							<h2 class="titlecupom">AME AMAR</h2>
 							<div class="bordered-feature-image">
 								<a href="https://ame-amar.desconto-no-curso.com.br/">
-								<img src="https://images.desconto-no-curso.com.br/ame-amar.webp" alt="Cupom de desconto Ame Amar" width="262px" height="110px" loading="lazy" />
+								<img src="https://images.desconto-no-curso.com.br/ame-amar-tb.webp" alt="Cupom de desconto Ame Amar" width="262px" height="110px" loading="lazy" />
 
 								</a>
 							</div>
@@ -288,7 +288,7 @@
 							<h2 class="titlecupom">NOVO CICLO</h2>
 							<div class="bordered-feature-image">
 								<a href="https://novo-ciclo.desconto-no-curso.com.br/">
-									<img src="https://images.desconto-no-curso.com.br/novo-ciclo.webp" alt="Cupom de desconto Novo Ciclo" width="262px" height="110px" loading="lazy"/>
+									<img src="https://images.desconto-no-curso.com.br/novo-ciclo-tb.webp" alt="Cupom de desconto Novo Ciclo" width="262px" height="110px" loading="lazy"/>
 								</a>
 							</div>
 							<p class="white-text">Pamela Magalhães: Com esse desconto exclusivo, você terá acesso a um conteúdo completo e inovador!</p>
@@ -305,7 +305,7 @@
 							<h2 class="titlecupom">A RETOMADA</h2>
 							<div class="bordered-feature-image">
 								<a href="https://a-retomada.desconto-no-curso.com.br">
-									<img src="https://images.desconto-no-curso.com.br/a-retomada.webp" alt="Cupom de desconto A Retomada" width="262px" height="110px" loading="lazy" />
+									<img src="https://images.desconto-no-curso.com.br/a-retomada-tb.webp" alt="Cupom de desconto A Retomada" width="262px" height="110px" loading="lazy" />
 
 								</a>
 							</div>
@@ -322,7 +322,7 @@
 							<h2 class="titlecupom">MENTORIA PARA PSICÓLOGOS</h2>
 							<div class="bordered-feature-image">
 								<a href="https://mentoria-para-psicologos.desconto-no-curso.com.br">
-									<img src="https://images.desconto-no-curso.com.br/mentoria-para-psicologos.webp" alt="Cupom de desconto Mentoria para Psicológos" width="262px" height="110px" loading="lazy"/>
+									<img src="https://images.desconto-no-curso.com.br/mentoria-para-psicologos-tb.webp" alt="Cupom de desconto Mentoria para Psicológos" width="262px" height="110px" loading="lazy"/>
 								</a>
 							</div>
 							<p class="white-text">Pamela Magalhães: Acelere seu crescimento profissional com um acompanhamento personalizado. </p>
@@ -336,7 +336,7 @@
 							<h2 class="titlecupom">E-BOOK BEM ME QUERO</h2>
 							<div class="bordered-feature-image">
 								<a href="https://e-book-bem-me-quero.desconto-no-curso.com.br/">
-								<img src="https://images.desconto-no-curso.com.br/super-aula-4-as-da-autoestima-tb.webp" alt="Cupom de desconto E-book Bem Me Quero" width="262px" height="110px" loading="lazy" />
+								<img src="https://images.desconto-no-curso.com.br/e-book-bem-me-quero-tb.webp" alt="Cupom de desconto E-book Bem Me Quero" width="262px" height="110px" loading="lazy" />
 
 								</a>
 							</div>
