--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 								</a>
 							</div>
 							<p class="white-text">ClaudiaVannini: Redescubra sua essência feminina com esta oferta especial.</p>
-							<a href="https://sua-venus-em-acao-desconto-no-curso.com.br" class="button" style="display:flex; justify-content:center; align-items:center; margin-bottom:15px" aria-label="Desbloqueie o desconto de Sua Vênus em Ação">ABRIR O CUPOM</a>
+							<a href="https://sua-venus-em-acao.desconto-no-curso.com.br" class="button" style="display:flex; justify-content:center; align-items:center; margin-bottom:15px" aria-label="Desbloqueie o desconto de Sua Vênus em Ação">ABRIR O CUPOM</a>
 						</section>
 					</div>
 					
