--- a/index.html
+++ b/index.html
@@ -258,12 +258,12 @@
 						<section>
 							<h2 class="titlecupom">NATFLIX</h2>
 							<div class="bordered-feature-image">
-								<a href="https://natflix.desconto-no-curso.com.br">
+								<a href="https://natflix-fitness.desconto-no-curso.com.br">
 									<img src="https://images.desconto-no-curso.com.br/natflix-tb.webp" alt="Cupom de desconto NatFlix Fitness" width="262px" height="110px" loading="lazy"/>
 								</a>
 							</div>
 							<p class="white-text">Natasha Villaschi: Treine em casa com Natflix! Garanta seu desconto.</p>
-							<a href="https://natflix.desconto-no-curso.com.br" class="button" style="display:flex; justify-content:center; align-items:center; margin-bottom:15px" aria-label="Desbloqueie o desconto de NatFlix">ABRIR O CUPOM</a>
+							<a href="https://natflix-fitness.desconto-no-curso.com.br" class="button" style="display:flex; justify-content:center; align-items:center; margin-bottom:15px" aria-label="Desbloqueie o desconto de NatFlix">ABRIR O CUPOM</a>
 						</section>
 					</div>
 
