--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link rel="preload" href="assets/css/main.css" as="style">
 	<link rel="stylesheet" href="assets/css/main.css" />
-	<link rel="alternate" href="https://desconto-no-curso.com.br" hreflang="pt-BR" />
-	<link rel="canonical" href="https://desconto-no-curso.com.br" />
+	<link rel="alternate" href="https://desconto-no-curso.com.br/index.html" hreflang="pt-BR" />
+	<link rel="canonical" href="https://desconto-no-curso.com.br/index.html" />
 	<link rel="preload" href="https://fonts.googleapis.com/css2?family=Ubuntu+Condensed&display=swap" as="style">
 
 
