--- a/politica-de-privacidade.html
+++ b/politica-de-privacidade.html
@@ -65,7 +65,7 @@
 	<p class="texto2">Mantemos os dados coletados apenas pelo tempo necessário para cumprir o serviço solicitado. Durante o armazenamento, utilizamos métodos comercialmente aceitáveis para proteger as informações contra perdas, roubos, acessos não autorizados, divulgação, cópia, uso ou modificações indevidas.</p> <br>
 	
 	<p class="texto2">Não compartilhamos dados de identificação pessoal de maneira pública ou com terceiros, exceto em casos exigidos por lei.</p> 
-	<p class="texto2">Nosso site pode conter links para páginas externas que não são gerenciadas por nós. Esteja ciente de que não temos controle sobre o conteúdo ou as práticas desses sites e não podemos nos responsabilizar pelas suas <a href='/privacidade.html' target='_BLANK'>políticas de privacidade</a>.</p> <br>
+	<p class="texto2">Nosso site pode conter links para páginas externas que não são gerenciadas por nós. Esteja ciente de que não temos controle sobre o conteúdo ou as práticas desses sites e não podemos nos responsabilizar pelas suas <a href='/politica-de-privacidade.html' target='_BLANK'>políticas de privacidade</a>.</p> <br>
 	
 	<p class="texto2">Você tem total liberdade para recusar o fornecimento de informações pessoais, entendendo que isso pode limitar o acesso a certos serviços desejados.</p> <br>
 	
