--- a/contato.html
+++ b/contato.html
@@ -154,7 +154,7 @@ input[type=submit]:hover {
 									<div class="col-3 col-6-medium col-12-small">
 										<ul class="link-list">
 											<li><a href="https://especializacao-manicures-iniciantes-e-experientes.desconto-no-curso.com.br/">Curso de Cutilagem</a></li>
-											<li><a href="https://sua-venus-em-acao-desconto-no-curso.com.br/">Sua Vênus em Ação</a></li>											
+											<li><a href="https://sua-venus-em-acao.desconto-no-curso.com.br/">Sua Vênus em Ação</a></li>											
 										</ul>
 									</div>
 									<div class="col-3 col-6-medium col-12-small">
