--- a/contato.html
+++ b/contato.html
@@ -89,7 +89,7 @@ input[type=submit]:hover {
 							<div class="col-8 col-12-medium">
 
 								<section>
-									<h1>Contato</h1>
+									<h1>Entre em Contato</h1>
 								
 										<div class="container-form">
  									 <form action="/action_page.php">
