--- a/perguntas-frequentes.html
+++ b/perguntas-frequentes.html
@@ -53,7 +53,7 @@
 							<div class="col-8 col-12-medium">
 
 								<section>
-	<h1>Perguntas Frequentes</h1>
+	<h1>As Perguntas mais Frequentes</h1>
 	
 	<h3 style="margin-top:30px">Como faço para usar os cupons?</h3>
 	<p class="texto2">No Desconto no Curso, você pode pesquisar por lojas ou categorias de produtos para encontrar todos os cupons disponíveis.</p><br><br><br>
