--- a/politica-de-privacidade.html
+++ b/politica-de-privacidade.html
@@ -56,7 +56,7 @@
 							<div class="col-12">
 
 								<section>
-	<h1>Política de Privacidade</h1>
+	<h1>Nossa Política de Privacidade</h1>
 	
 	<p class="texto2">Sua privacidade é essencial para nós. A política do desconto-no-curso.com.br é respeitar a sua privacidade em relação a qualquer dado seu que possamos coletar no site <a href="/">desconto-no-curso.com.br</a> e em outros sites que gerenciamos e operamos.</p> <br>
 	
