--- a/termos-de-uso.html
+++ b/termos-de-uso.html
@@ -59,7 +59,7 @@
 							<div class="col-12">
 
 								<section>
-	<h1>Termos de Uso</h1>
+	<h1>Nossos Termos de Uso</h1>
 	<p class="texto2">
 		Ao acessar o site <a href='/'>desconto-no-curso.com.br</a>, você concorda em cumprir estes termos de serviço, todas as leis e regulamentos aplicáveis, e reconhece ser responsável pelo cumprimento das leis locais aplicáveis. <br><br>
 		Caso não concorde com algum desses termos, você está proibido de usar ou acessar este site. Os materiais contidos neste site são protegidos por leis de direitos autorais e marcas registradas.
